<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pl.edu.mimuw.exshare.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_Home_to_JoinCourse"
            app:destination="@id/nav_join_course" />
        <action
            android:id="@+id/action_Home_to_CreateCourse"
            app:destination="@id/nav_create_course" />
        <action
            android:id="@+id/action_Home_to_YourCourses"
            app:destination="@id/nav_your_courses" />
    </fragment>

    <fragment
        android:id="@+id/nav_course"
        android:name="pl.edu.mimuw.exshare.CourseFragment"
        android:label="@string/course_title"
        tools:layout="@layout/fragment_course" />

    <fragment
        android:id="@+id/nav_join_course"
        android:name="pl.edu.mimuw.exshare.JoinCourseFragment"
        android:label="@string/join_course_title"
        tools:layout="@layout/fragment_join_course">
        <action
            android:id="@+id/action_JoinCourse_to_Course"
            app:destination="@id/nav_course" />
    </fragment>

    <fragment
        android:id="@+id/nav_create_course"
        android:name="pl.edu.mimuw.exshare.CreateCourseFragment"
        android:label="@string/create_course_title"
        tools:layout="@layout/fragment_create_course">
        <action
            android:id="@+id/action_CreateCourse_to_Course"
            app:destination="@id/nav_course" />
    </fragment>

    <fragment
        android:id="@+id/nav_your_courses"
        android:name="pl.edu.mimuw.exshare.YourCoursesFragment"
        android:label="@string/your_courses_title"
        tools:layout="@layout/fragment_your_courses">
        <action
            android:id="@+id/action_YourCourses_to_Course"
            app:destination="@id/nav_course" />
    </fragment>

</navigation>