<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="90dp"
    android:layout_marginRight="40dp"
    tools:context=".AddTestFragment">

    <LinearLayout
        android:id="@+id/linear_layout_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/test_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/name_your_test" />

        <Button
            android:id="@+id/create_test"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:background="@color/myLightGreen"
            android:padding="10dp"
            android:text="@string/create_test"
            android:textColor="@color/myDarkBrown"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/already_added_exercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/add_exercise_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/myLightGreen"
            android:drawableStart="@drawable/ic_plus"
            android:drawableLeft="@drawable/ic_plus"
            android:padding="10dp"
            android:text="@string/add_exercise"
            android:textColor="@color/myDarkBrown"
            android:textSize="17sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/confirm_add_test"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@color/myMiddleGreen"
            android:padding="10dp"
            android:text="@string/confirm_add_test"
            android:textColor="@color/myDarkBrown"
            android:textSize="17sp"
            android:visibility="invisible" />

    </LinearLayout>


</ScrollView>