<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/home_hello1_text"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/home_hello1"
        android:textColor="@color/myVeryDarkGreen"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/home_hello2_text"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/home_hello2"
        android:textColor="@color/myDarkBrown"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/join_course_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_hello1_text" />

    <Button
        android:id="@+id/join_course_button"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:background="@color/myMiddleGreen"
        android:gravity="center"
        android:text="@string/join_course_title"
        android:textColor="@color/myDarkBrown"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/create_course_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_hello2_text" />

    <Button
        android:id="@+id/create_course_button"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@color/myMiddleGreen"
        android:gravity="center"
        android:text="@string/create_course_title"
        android:textColor="@color/myDarkBrown"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_course_button" />

</androidx.constraintlayout.widget.ConstraintLayout>