<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinCourseFragment">

    <TextView
        android:id="@+id/join_course_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/enter_course_code_label"
        android:textColor="@color/myVeryDarkGreen"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/join_course_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/join_course_place"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_course_code_place"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/sign_to_course_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_course_label" />

    <Button
        android:id="@+id/sign_to_course_button"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:background="@color/myMiddleGreen"
        android:gravity="center"
        android:text="@string/join_course_title"
        android:textColor="@color/myDarkBrown"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_course_place" />
</androidx.constraintlayout.widget.ConstraintLayout>