<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    tools:context=".AddExerciseFragment">


    <ImageView
        android:id="@+id/add_content_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/idea"
        app:layout_constraintBottom_toTopOf="@+id/exercise_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/exercise_number"
        android:layout_width="170dp"
        android:layout_height="43dp"
        android:layout_marginBottom="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/add_exercise_number"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/add_image_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,MissingConstraints,TextFields" />

    <Button
        android:id="@+id/add_image_btn"
        android:layout_width="170dp"
        android:layout_height="43dp"
        android:layout_marginBottom="50dp"
        android:background="@color/myLightBlue"
        android:padding="5dp"
        android:text="@string/add_content_gallery"
        android:textColor="@color/myVeryDarkBlue"
        app:layout_constraintBottom_toTopOf="@+id/upload_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/upload_btn"
        android:layout_width="170dp"
        android:layout_height="43dp"
        android:layout_marginBottom="100dp"
        android:background="@color/myLightBlue"
        android:padding="5dp"
        android:text="@string/upload_content"
        android:textColor="@color/myVeryDarkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>